added graphs to report

--- a/Domination/honours-project-report/report.tex
+++ b/Domination/honours-project-report/report.tex
@@ -1397,13 +1397,25 @@ Of free and constrained play table 7.1 reveals that \textit{constrained play had
 
 We then ask why and why not, did it converge.
 
+\newpage
+
 \begin{figure}[h]
 \centerline{
-\includegraphics[width=\textwidth]{images/general-graph.pdf}
+\includegraphics[width=0.9\textwidth]{images/general-game-complete.pdf}
 }
 \caption{General Prediction Accuracy}
 \label{fig:dom-debug-gui}
 \end{figure} 
+
+\begin{figure}[h]
+\centerline{
+\includegraphics[width=0.9\textwidth]{images/general-game-length.pdf}
+}
+\caption{General Prediction Accuracy}
+\label{fig:dom-debug-gui}
+\end{figure} 
+
+\newpage
 
 Figure 5.2 details the general prediction accuracy of the plan recognition agent at intervals of 25\% of the games duration. From this we can infer several important trends.
 
@@ -1480,13 +1492,25 @@ By definition in cases where a player performs action on non-mission continents 
 
 \subsubsection{Prediction Accuracy of Winners}
 
+\newpage
+
 \begin{figure}[h]
 \centerline{
-\includegraphics[width=\textwidth]{images/winner-graph.pdf}
+\includegraphics[width=0.9\textwidth]{images/winner-game-complete.pdf}
 }
 \caption{Winner Prediction Accuracy}
 \label{fig:dom-debug-gui}
 \end{figure} 
+
+\begin{figure}[h]
+\centerline{
+\includegraphics[width=0.9\textwidth]{images/winner-game-length.pdf}
+}
+\caption{Winner Prediction Accuracy}
+\label{fig:dom-debug-gui}
+\end{figure} 
+
+\newpage
 
 Comparison of the Figure 5.3 to figure 5.4 shows that in every type of play the plan recognition agents \textit{prediction accuracy of winners is better than that of losers}. The plan recognition agent is more successful at predicting due to a number of reasons:
 
@@ -1500,13 +1524,25 @@ Therefore the shorter the game the more likely the prediction will be correct fo
 
 \subsubsection{Prediction Accuracy of Losers}
 
+\newpage
+
 \begin{figure}[h]
 \centerline{
-\includegraphics[width=\textwidth]{images/loser-graph.pdf}
+\includegraphics[width=0.9\textwidth]{images/loser-game-complete.pdf}
 }
 \caption{Domination Debug Graphical User Interface}
 \label{fig:dom-debug-gui}
 \end{figure} 
+
+\begin{figure}[h]
+\centerline{
+\includegraphics[width=0.9\textwidth]{images/loser-game-length.pdf}
+}
+\caption{Winner Prediction Accuracy}
+\label{fig:dom-debug-gui}
+\end{figure}
+
+\newpage
 
 GENERAL REASONS WHY LOSER ACCURACY IS WORSE
 
